--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,3 +3,11 @@
   width: 100%;
   height: 100%;
 }
+
+.cards_section{
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  overflow-x:auto;
+}
